resolved overflow in css

--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,9 @@
 
 .contact-container {
 
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  text-align: initial;
+  display:flex;
+  justify-content:center;
+  margin:2em auto;
 
 }
 
@@ -122,7 +121,7 @@ border-radius: 8px;
 
 }
 .error-message{
-  width: 320px;
+  /* width: 320px; */
 height: 20px;
 font-family: 'Inter';
 font-style: normal;
@@ -370,21 +369,25 @@ main {
     top: 40px;
   }
 /* contact-us page */
-.contact-container{
-  display: flex;
-  justify-content: center;
-  align-self: flex-start;
-  align-items: self-start;
-  margin:0px 2em;
-
+.contact-container {
+  display:grid;
+  justify-content:center;
+  place-content: center;
+  margin:3em auto;
+}
+.contact-inner-container{
+  margin:1em auto;
+  width:85%;
 }
 
 .form-name-field{
   display:flex;
   flex-direction: column;
 }
+
 .contact-intro{
-  width: 343px;
+  font-size:16px;
+  width:100%;
 }
 
 .input-field {
@@ -420,9 +423,6 @@ padding-right:5px;
   width: 100%;
 height: 48px;
 }
-.contact-inner-container{
-  width:100%;
-  /* margin: 0px 3em 0px 3em ; */
-}
+
 
 }
